# pypetgraph

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: api.md
src/: lib.rs
src/pypetgraph/: __init__.py  _pypetgraph.pyi
tests/: test_async.py  test_correctness.py  test_cross_validation.py  test_new_apis.py  test_performance.py  test_pypetgraph.py
