[package]
name = "pypetgraph"
version = "0.1.0"
edition = "2021"

[lib]
name = "_pypetgraph"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
petgraph = { version = "0.7", features = ["all"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true # Automatically strip symbols for smaller binary size
