[project]
name = "pypetgraph"
version = "0.1.0"
description = "High-performance Python bindings for the Rust petgraph library with asyncio support"
readme = "README.md"
authors = [
    { name = "curry tang", email = "twn39@163.com" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["graph", "network", "petgraph", "rust", "pyo3", "asyncio", "dijkstra"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=2.2.0",
    "scipy>=1.15.0",
]

[project.urls]
Homepage = "https://github.com/twn39/pypetgraph"
Repository = "https://github.com/twn39/pypetgraph"
Issues = "https://github.com/twn39/pypetgraph/issues"
Documentation = "https://github.com/twn39/pypetgraph/blob/main/docs/api.md"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "pypetgraph._pypetgraph"
bindings = "pyo3"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "networkx>=3.6.1",
    "psutil>=7.2.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pypetgraph"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "benchmark: marks tests as benchmarks",
]

[tool.coverage.run]
source = ["pypetgraph"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "async def.*_async",
    "def __repr__",
    "raise NotImplementedError",
]
